chore: 批量新增/删除游戏资源纹理文件
本次提交新增了大量方块、物品、UI界面的纹理资源文件，同时删除了一批旧的中文命名的纹理资源文件，统一资源管理规范。